=== Alexander-39 ===

=== Alexander-38 ===

2002-12-17  Richard Williamson   <rjw@apple.com>

        Fixed 3127932.  Added WebFrameLoadTypeReloadAllowingStaleData to cases that do not
        get cached in the b/f cache.
        
        Reviewed by trey.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _setState:]):

2002-12-17  Richard Williamson   <rjw@apple.com>

        Fixed 3128794.  Use CG directy to get font metrics rather than the appkit.  The appkit
        has a bug (3129490) that sometimes causes line height to be 20% too large.
        
        Reviewed by hyatt.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer initWithFont:]):
        (-[WebTextRenderer ascent]):
        (-[WebTextRenderer descent]):
        (-[WebTextRenderer lineSpacing]):

2002-12-17  Trey Matteson  <trey@apple.com>

	Reworking the code to update the page icon led me to roll the WebIconDB API
	for URL to NSString.  In addition, the vestigial "Site" was removed.

	Everything below is renaming, except where noted.

        Reviewed by Darin

        * English.lproj/StringsNotToBeLocalized.txt:
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem _retainIconInDatabase:]):
        (-[WebHistoryItem icon]):
        * Misc.subproj/WebIconDatabase.h:
        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase init]):
        (-[WebIconDatabase iconForURL:withSize:cache:]):  Use _web_isFileURL.
        (-[WebIconDatabase iconForURL:withSize:]):
        (-[WebIconDatabase retainIconForURL:]):
        (-[WebIconDatabase releaseIconForURL:]):
        (-[WebIconDatabase _iconDictionariesAreGood]):
        (-[WebIconDatabase _loadIconDictionaries]):
        (-[WebIconDatabase _updateFileDatabase]):
        (-[WebIconDatabase _iconForFileURL:withSize:]):  Cons up a NSURL to get the path.
	Test explicitly for .htm and .html suffixes.
        (-[WebIconDatabase _setIcon:forIconURL:]):